@@ -2,10 +2,12 @@ DIST synthv1-0.3.3.tar.gz 124108 SHA256 116122dcbff24302ea10dc4ad9c835c94416c287
 DIST synthv1-0.3.4.tar.gz 169699 SHA256 2291e7ace290497ea50acd4c6bbb080f3b2ada8abdda4dc6132120502dcfe8c8 SHA512 296fafc83cba1d5d529cafb3cb0c34d4ee9fe189c62f4c8c32eacd29d060744165f82678163e321118892073e9135bce7d278369951528c6d6438569d823bb10 WHIRLPOOL 05024b63137362f36fbef90ac50e36e826f3480883f6df2ab3716636efa22b95fc02f8668a9dc247962b599784e001a141a55ae4fb6d0e87d92929f8f3b267e7
 DIST synthv1-0.3.5.tar.gz 172088 SHA256 5b9795bbbc78868ced79605c4c974ba33635df7b0e06e1139bac8418b1f7b590 SHA512 39553ff5493d148937a4652a75754f982d45bc7f35e1f0c918ba3a1d0776fcd49591c181a71dbfc70deabf90f71fd63532fb0fd7d9894dc2692fde39f5ba748b WHIRLPOOL 6c5649fc2d284eba6bd78c9c66184cba962937829ff5ac9b3ba331ecba81427a9937b0f510efd43525e6a77b81f582606ad83cca72a00799993e87c6e7017b6e
 DIST synthv1-0.3.6.tar.gz 177067 SHA256 3e7b9b8e34c80c095bb481a7f97b763d7715dc78271226b64bce90f2c26c44f6 SHA512 95d65eaed9b4db58a605033f9041bb46d92de7f9a08f07a73586454c6fad7cc4162d5d2647ad4ef3e4271dc3bb50b7f9e0fdded2f5910996f071c9228df1c102 WHIRLPOOL 9eef7f40d75c4c63e2aab165f9d0005867a5dc9bada6b655e6432997a54164fb8e9da62c6013e443d9c8f0107dd7a0da275e58e0b0d7ba878b2937490d3fdeec
+DIST synthv1-0.4.0.tar.gz 180829 SHA256 dbb13d527dbd10b3b602347c286ab3c2a9a1df9bde6bbe7049d991a38392dd7f SHA512 169c0b2d885baf8380245a19126484859c8e22654df88470e7ce90f56f23aa0721888673b27dc5e6c456721c3153c62171e93662fe4028cb54f7cd4c9b773b7e WHIRLPOOL 4b8903c521bfe1ddc0932fdc84946323917771bc1dec22d547ae2f69e6418d1882b7955f694bde4ea30d520d0fc3e029b05c998715fb081cd14e7df142355d59
 EBUILD synthv1-0.3.3.ebuild 1632 SHA256 01190925e91dd5662f91b11cdcb1da1b967b4dcfaa8c5ef06cd11c74e0e9f20b SHA512 6c495062042b07fcc54a61625b73bc02f0ba3114eb0e25196dea325963b4161f40693d606ebbc60adcb4f325fee6977133a4e3181457d65341a068e721ab0fd4 WHIRLPOOL bcb23f2ffcf910fdb82b43d8e30d6a14261b07262a2040170e67711658a5614c451a8704a21c0434a543a57f843aeb82ef0ca15ccb8c11ae00fb9a29bcc35690
 EBUILD synthv1-0.3.4.ebuild 1742 SHA256 965d20a813952c694ca1743ec8556ce09a9df54d5e0c65c41dcedf224479fc8a SHA512 9a211e150bc046ed39e52568f8efc873e2ab7436829cb979fbaa9eb5f54aaf1a5f4fbca69bf4341cdbadda2ae11bd9ef5f95a2b78a551a74c6f20ce6595aa862 WHIRLPOOL 92fbe4530c83004c3d85bdbcc59df9e5ca7c3eec6f09f4801b35bf9049df4f01a3e6a099d7c9979fe73dfb39f5e6d506e368daacac014a3f9dd5b69ac58ead58
 EBUILD synthv1-0.3.5.ebuild 1742 SHA256 965d20a813952c694ca1743ec8556ce09a9df54d5e0c65c41dcedf224479fc8a SHA512 9a211e150bc046ed39e52568f8efc873e2ab7436829cb979fbaa9eb5f54aaf1a5f4fbca69bf4341cdbadda2ae11bd9ef5f95a2b78a551a74c6f20ce6595aa862 WHIRLPOOL 92fbe4530c83004c3d85bdbcc59df9e5ca7c3eec6f09f4801b35bf9049df4f01a3e6a099d7c9979fe73dfb39f5e6d506e368daacac014a3f9dd5b69ac58ead58
 EBUILD synthv1-0.3.6.ebuild 1742 SHA256 f68975679f9cbd342c8517b9cfc314d718c8a784f451312112525704843ed3d1 SHA512 e73c2d472d538bf75f525d228cf9e5f4f38d509d8c59d15f5c37c2c00b12df84adaa3fbc4e7b35ba1e7dc4ffcf72a826e21cb9b50889e82514b64c21b33bd45e WHIRLPOOL 76f15985196eee5323b4ce8bde0d1a9f5c77aadfa1b208c82e212b417f922b864837110b89e17ccfde41a3fd573f8578d2c760dfae52fa06718a1b22c642b81f
+EBUILD synthv1-0.4.0.ebuild 1742 SHA256 f68975679f9cbd342c8517b9cfc314d718c8a784f451312112525704843ed3d1 SHA512 e73c2d472d538bf75f525d228cf9e5f4f38d509d8c59d15f5c37c2c00b12df84adaa3fbc4e7b35ba1e7dc4ffcf72a826e21cb9b50889e82514b64c21b33bd45e WHIRLPOOL 76f15985196eee5323b4ce8bde0d1a9f5c77aadfa1b208c82e212b417f922b864837110b89e17ccfde41a3fd573f8578d2c760dfae52fa06718a1b22c642b81f
 EBUILD synthv1-9999.ebuild 1742 SHA256 965d20a813952c694ca1743ec8556ce09a9df54d5e0c65c41dcedf224479fc8a SHA512 9a211e150bc046ed39e52568f8efc873e2ab7436829cb979fbaa9eb5f54aaf1a5f4fbca69bf4341cdbadda2ae11bd9ef5f95a2b78a551a74c6f20ce6595aa862 WHIRLPOOL 92fbe4530c83004c3d85bdbcc59df9e5ca7c3eec6f09f4801b35bf9049df4f01a3e6a099d7c9979fe73dfb39f5e6d506e368daacac014a3f9dd5b69ac58ead58
-MISC ChangeLog 3022 SHA256 4ef764d9defcd3890b12f14e51ae7234c2b2e2649befd0b6f1e3495c78b1803d SHA512 9bfc67eab0be022f57206b81398acc75033fa12c25cdb34b66f991d882d865b51c37ce1c1660af11eaca31af77fb2a6eb616a807ae9b30467c0872837df7dd66 WHIRLPOOL 54ab81e423c2eee595050199978e32cbd89737270e1fb17498f0c5cbcf94d31c998cfd650c70b52f56472f7cbbfec81d461030f21d81efa1f8ba05a233400137
+MISC ChangeLog 3149 SHA256 cd8edff2e0062a6014fbd6ad11be36e2ba7bfa72308963e7b27e6a258d076502 SHA512 55bba8c98cd5b5d96c5350fe1486fb436baf852423ad2b7f6e4057fa67aad1aba70bb128851cf039abf0cf2954ac35b0f24298c6febffccc82a165f6c7e4c563 WHIRLPOOL b70241361e87732d68852fdd4245d8bd65e2a96c327c21bbc109cddff8d5261f911a0e82754bdd3ed67cba15f11e3e7eadfcee86cd2600bc4b1f5d2f312f99c4
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
